# estate-static-ip-egress-proxy

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  license.md
.github/workflows/: deploy_fly.yaml  fly-deploy.yml
axum-example-rev-proxy/: Cargo.toml
axum-example-rev-proxy/src/: app_state.rs  dns_resolver.rs  main.rs  nowpayments_ipn_webhook.rs  sort_json.rs
