[package]
name = "axum-example-rev-proxy"
version = "0.1.0"
edition = "2021"

[features]
debug_response = []

[dependencies]
axum = {version = "0.8"}
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "http2",
    "rustls-tls",
] }
serde = {version = "1.0", features = ["derive"]}
flate2 = "1.0"
# hyper-tls = "0.6.0"
serde_json = "1.0.138"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
thiserror = "2.0.11"
